minor alignment issues

--- a/static/css/local.css
+++ b/static/css/local.css
@@ -4,7 +4,7 @@ body {
   padding:0;
 }
 
-hgroup {
+.center {
   text-align: center;
 }
 
